# keh-github-statistics-scraper

./: README.md  checkov.yml  pyproject.toml
concourse/: ci.yml
concourse/scripts/: assume_role.sh  build_image.sh  set_pipeline.sh  terraform_infra.sh
terraform/batch/: main.tf  secrets.tf  variables.tf
terraform/batch/env/dev/: example_tfvars.txt
terraform/batch/env/prod/: example_tfvars.txt
