[tool.poetry]
name = "github-org-tech-lambda"
version = "0.1.0"
description = ""
authors = ["ONS-Innovation keh-dev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
logging = "^0.4.9.6"
boto3 = "^1.35.95"
github-api-toolkit = {git = "https://github.com/ONS-Innovation/github-api-package.git", rev = "v2.0.3"}
botocore = "^1.35.95"
jwt = "^1.3.1"
requests = "^2.32.3"
datetime = "^5.5"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
ruff = "^0.9.0"
black = "^26.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
